Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- The confirmation workflow is simplified:
  - Made the creator of an event automatically confirmed.
  - Made notification on event creation automatic.
  - The organizer doesn't need to approve his own meeting request.
  - Confirmation of events now is done directly on all
    attendees calendars, and not via the organizing calendar.
  - Deleting events now cancels them, even in the deleters calendar.
  - Verifying cancellations no longer sends new events to verify.
  - Removing an attendee now sends a cancel to the attendee.
  - The organizer is now always a participant (even if it is an event).
  - Adding attendees now automatically sends a notification.
  - Modifying the event now automatically sends a notification.
   
Bug fixes:
~~~~~~~~~~
- With Zope 2.7.1 and later selected attendees was lost when creating meetings.
  (#1483)
- You can no longer remove the organizer from the attendees list.
- New events do not need to have confirmations sent.
- A KeyError 'id' when running the installer was fixed.
- The document link was lost when editing the document.
- The confirmation options are now radio buttons instead of a select list.
- You can now only modify and delete events via the organizers calendar.
- searchCalendars now only returns users if they have a calendar.
- The meeting creation form no longer loses the to and from times when
  you search for users.
- Some formatting errors in the pending events view was fixed.
- Searching for calendars on the id field when restrictive user search was
  selected, returned all users with View-permission.
- When removing attendees from an event, if you didn't select any attendees
  you got an error message.
- Fixed some language bugs.
- The Content-Type of the ics export is now text/calendar.
- Default event status is now 'confirmed'.
- You now can not delete canceled events.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-